@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import cz.vutbr.fit.group.verifit.oslc.shared.utils.Utils;
 
@@ -17,7 +18,7 @@ public class FilterUtils {
 	 * @throws IOException
 	 */
 	public static String loadContentsOfFilePathFile(String filePath) throws IOException {
-		Path f = Path.of(filePath);
+		Path f = Paths.get(filePath);
 		byte [] fileContents = Files.readAllBytes(f);
 		return new String(fileContents);
 	}
